File Name: CHANGES

08/13/2014 FASP 1.5.7:
- Add a user option for choosing coarse level solvers.

08/12/2014 FASP 1.5.6:
- Handling errors when RS coarsening does not succeed. 
- Handling errors when Pairwise aggreation does not succeed. 
- Handling errors when VMB aggreation does not succeed. 
- When AMG setup fail on the finest level, use coarse solver.
- Check max level and make sure allocate at least one level.
- Add a name for G0 points (for pairwise aggregation).
- Uniformize debug output format.
- Change adaptive GMRES (various versions) restart number.
- Remove unused *_omp() functions.
- Update webpage.

07/26/2014 FASP 1.5.5:
- Modify the parameter for pairwise aggregation.
- Fix warnings for data type REAL in sparse_bsr.c
- Update results of the regression test.
- Add block preconditioners for MHD.
- Update block preconditioners.
- Change dCOOmat entries to avoid conflicts with complex.h.
- Revise debug output for iterative methods and more. 
- Add error handling for classical AMG setup. 

06/20/2014 FASP 1.5.4:
- Fix a bug in io.c.
- Fix incompability in Windows VC++/IC++: mkheaders.awk reverted to the previous version.
- Fix a bug in aggregation_csr.inl for OpenMP.
- Fix a bug in smat.c for 4X4 matrix inversion. 
- Fix a bug in BSR_COO output function.
- Fix a bug in OpenMP in AMG direct interpolation. 
- Fix VS10 setting for OpenMP.
- When using FASP function in CPP file, now need to use extern "C". 
- Update Windows VS10 solution: Updated to Intel C++ 14.0.3.
- Update regression test results. 

06/08/2014 FASP 1.5.3:
- Add Smoothed Aggregation AMG for BSR format.
- Add solver for linear elasiticy (under development).
- Add subroutines for read in and write HB format files.
- Change some macros to prevent confliction with MPI.h.
- Change macros accordingly for interfaces and other FASP projects.
- Fix a bug in tutorial when using AMG as a solver.
- Fix a bug in SPE1 tutorial example.