@@ -197,7 +197,7 @@ static SHORT amg_setup_smoothP_smoothR (AMG_data *mgl,
             status = fasp_ilu_dcsr_setup(&mgl[level].A, &mgl[level].LU, &iluparam);
             if ( status < 0 ) {
                 param->ILU_levels = level;
-                printf("### WARNING: ILU setup on level%d failed!\n", level);
+                printf("### WARNING: ILU setup on level-%d failed!\n", level);
             }
         }
         
@@ -219,7 +219,7 @@ static SHORT amg_setup_smoothP_smoothR (AMG_data *mgl,
 		
         if ( status < 0 ) {
             // When error happens, force solver to use the current multigrid levels!
-            printf("### WARNING: Coarsening on level%d is not successful!\n", level);
+            printf("### WARNING: Coarsening on level-%d is not successful!\n", level);
             status = FASP_SUCCESS; break;
         }
         
@@ -383,7 +383,7 @@ static SHORT amg_setup_smoothP_unsmoothR (AMG_data *mgl,
             status = fasp_ilu_dcsr_setup(&mgl[level].A, &mgl[level].LU, &iluparam);
             if ( status < 0 ) {
                 param->ILU_levels = level;
-                printf("### WARNING: ILU setup on level%d failed!\n", level);
+                printf("### WARNING: ILU setup on level-%d failed!\n", level);
             }
         }
         
@@ -405,7 +405,7 @@ static SHORT amg_setup_smoothP_unsmoothR (AMG_data *mgl,
         
         if ( status < 0 ) {
             // When error happens, force solver to use the current multigrid levels!
-            printf("### WARNING: Coarsening on level%d is not successful!\n", level);
+            printf("### WARNING: Coarsening on level-%d is not successful!\n", level);
             status = FASP_SUCCESS; break;
         }
 
@@ -581,7 +581,7 @@ static SHORT amg_setup_smoothP_smoothR_bsr (AMG_data_bsr *mgl,
             status = fasp_ilu_dbsr_setup(&mgl[level].A, &mgl[level].LU, &iluparam);
             if ( status < 0 ) {
                 param->ILU_levels = level;
-                printf("### WARNING: ILU setup on level%d failed!\n", level);
+                printf("### WARNING: ILU setup on level-%d failed!\n", level);
             }
         }
         
@@ -618,7 +618,7 @@ static SHORT amg_setup_smoothP_smoothR_bsr (AMG_data_bsr *mgl,
 
         if ( status < 0 ) {
             // When error happens, force solver to use the current multigrid levels!
-            printf("### WARNING: Coarsening on level%d is not successful!\n", level);
+            printf("### WARNING: Coarsening on level-%d is not successful!\n", level);
             status = FASP_SUCCESS; break;
         }
         
