@@ -1,7 +1,9 @@
 File Name: CHANGES
 
-08/13/2014 FASP 1.5.7:
+08/21/2014 FASP 1.5.7:
 - Add a user option for choosing coarse level solvers.
+- Fix average number of nonzeros output format problem. 
+- Change AMG complexities output format. 
 
 08/12/2014 FASP 1.5.6:
 - Handling errors when RS coarsening does not succeed. 
